[package]
name = "dar-ke"
version = "0.1.0"
edition = "2021"
default-run = "dar-ke"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_egui = "0.30" # b14 compat version: 28-30
#bevy_egui = "0.31.1"
bevy_pixel_buffer = { version = "*", features = ["egui"] }
#radians = "0.3.1"
rand = "0.8.5"
rusty-ppm = "*"

[dev-dependencies]
assert_float_eq = "*"
pretty_assertions = "*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


